# diskostat

./: .gitlab-ci.yml  Cargo.toml  LICENSE  README.md
.gitlab/issue_templates/: Bug.md  Default.md
.gitlab/merge_request_templates/: Default.md
docs/: CONTRIBUTING.md
lib/ref_tree/: Cargo.toml
lib/ref_tree/src/: lib.rs
lib/ref_tree/src/model/: tree.rs
lib/ref_tree/src/model/node_mod/: node.rs  node_to_root_iterator.rs  tests.rs
lib/ref_tree/src/model/tree_mod/: pretty_print.rs  tests.rs  tree.rs
lib/ref_tree/src/node_mod/: node.rs
lib/ref_tree/src/tree_mod/: pretty_print.rs  tests.rs  tree.rs
src/: action.rs  app.rs  event.rs  main.rs  tui.rs  ui.rs  utils.rs
src/app/: model.rs
src/backend/: disko_tree.rs  file_system_wrapper.rs  mod.rs  tree_walk_state.rs  types.rs
src/backend/model/: entry_node.rs  entry_size.rs  entry_type.rs  jwalk_dir_entry_wrapper.rs  node.rs  tree.rs  tree_walk_state.rs
src/components/: files.rs  mod.rs
src/ui/: app.rs  color_theme.rs  disko_event_handling.rs  event_handling.rs  key_handling.rs  mod.rs  render.rs  renderer.rs  tui.rs
src/ui/components/: confirm_delete.rs  indicator.rs  mod.rs  table.rs
