[package]
name = "diskostat"
version = "0.1.0"
edition = "2021"
authors = ["Alex <514439@mail.muni.cz>", "Jakub <jakubpekar@mail.muni.cz>", "Michal <michalnemec@mail.muni.cz>", "Lukáš <492717@mail.muni.cz>"]
description = "The best utility to make some space"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "disko"
path = "src/main.rs"

[workspace]
members = [
  "lib/ref_tree"
]

[workspace.dependencies]
ref_tree = { path = "lib/ref_tree" }

[dependencies]
jwalk = "0.8.1"
ref_tree = { workspace = true }
crossterm = "0.27.0"
ratatui = "0.25.0"
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
byte-unit = "5.1.3"
filesize = "0.2.0" 
dunce = "1.0.4"
chrono = "0.4.33"